@@ -1,12 +1,8 @@
 package com.DreamFactory.DF.destination.dto;
 
 import com.DreamFactory.DF.destination.Destination;
-//import com.DreamFactory.DF.review.ReviewMapper;
-import com.DreamFactory.DF.user.dto.UserMapper;
 import org.springframework.stereotype.Component;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class DestinationMapper {
@@ -25,10 +21,25 @@ public class DestinationMapper {
         return destination;
     }
 
-//    public static DestinationResponse toResponse(Destination destination) {
+    public static DestinationResponse toResponse(Destination destination) {
+        if (destination == null)
+            return null;
+        return new DestinationResponse(
+                destination.getId(),
+                destination.getTitle(),
+                destination.getLocation(),
+                destination.getDescription(),
+                destination.getImageUrl(),
+                destination.getUser() != null ? destination.getUser().getUsername() : null,
+                destination.getCreatedAt(),
+                destination.getUpdatedAt());
+    }
+
+//    public static DestinationWithReviewsResponse toWithReviewsResponse(Destination destination) {
 //        if (destination == null)
 //            return null;
-//        return new DestinationResponse(
+//
+//        return new DestinationWithReviewsResponse(
 //                destination.getId(),
 //                destination.getTitle(),
 //                destination.getLocation(),
@@ -39,6 +50,7 @@ public class DestinationMapper {
 //                destination.getUpdatedAt(),
 //                destination.getReviews() != null ? destination.getReviews().stream()
 //                        .map(ReviewMapper::toResponse)
-//                        .collect(Collectors.toList()) : List.of());
+//                        .toList() : List.of());
 //    }
+
 }
